<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AyasHome</string>
    <string name="imgDescription">Perfil</string>
    <string name="titulo">"Aya's home"</string>
    <string name="fecha">Fecha:</string>
    <string name="fechaEntrada">Fecha de entrada:</string>
    <string name="fechaSalida">Fecha de salida:</string>
    <string name="catering">Catering:</string>
    <string name="logOut">Cerrar Sesión</string>
    <string name="toast">Presione otra vez para confirmar</string>
    <string name="fechaPlaceHolder">Fecha</string>
    <string name="horaPlaceHolder">Hora</string>
    <string name="logo">Logo</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Cancelar</string>
    <string name="todo">delete</string>
    <string name="user">Usuario</string>
    <string name="textview">No hay reservas</string>
    <string name="botonReserva">Reservar</string>
</resources>