<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor">

    <ImageView
        android:id="@+id/imgGrande"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#DCACAC"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:buttonGravity="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:contentDescription="@string/imgDescription"
        android:focusable="true"
        android:src="@drawable/user"
        app:layout_constraintBottom_toTopOf="@+id/rvMain"
        app:layout_constraintEnd_toEndOf="@+id/toolbarMain"
        app:layout_constraintStart_toEndOf="@+id/imgHeader"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgHeader"
        android:layout_width="194dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarMain"
        app:layout_constraintStart_toEndOf="@+id/imgHome"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_nombre" />

    <ImageView
        android:id="@+id/imgHome"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:layout_marginEnd="307dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarMain"
        app:layout_constraintEnd_toEndOf="@+id/toolbarMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_icono" />

    <TextView
        android:id="@+id/servicio"
        android:layout_width="138dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgGrande" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:elegantTextHeight="false"
        android:scrollbars="vertical"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/tvPrecio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servicio" />

    <TextView
        android:id="@+id/tvPrecio"
        android:layout_width="81dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcion" />

    <Button
        android:id="@+id/reserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginEnd="43dp"
        android:text="@string/botonReserva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrecio"
        app:layout_constraintVertical_bias="0.811" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="104dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toTopOf="@+id/imgGrande"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo_icono" />


    <EditText
        android:id="@+id/etFecha"
        android:layout_width="136dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="false"
        android:hint="@string/fechaPlaceHolder"
        android:inputType="textPersonName"
        android:onClick="listenerBotones"
        android:textAlignment="textStart"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgGrande"
        app:layout_constraintVertical_bias="0.72" />

    <EditText
        android:id="@+id/etHora"
        android:layout_width="136dp"
        android:layout_height="41dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="false"
        android:hint="@string/horaPlaceHolder"
        android:inputType="textPersonName"
        android:onClick="listenerBotones"
        android:textAlignment="textStart"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etFechaSalida"
        android:layout_width="136dp"
        android:layout_height="42dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:hint="@string/fechaSalida"
        android:inputType="textPersonName"
        android:onClick="listenerBotones"
        android:textAlignment="textStart"
        android:visibility="visible"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>